tests/negative/neg_named_number_unsupported.safe
-- Test: neg_named_number_unsupported
-- Description: Named-number syntax remains out of scope for PR08.3a.
-- Expected: REJECT unsupported_source_construct

package Neg_Named_Number_Unsupported

   Limit : constant = 4;

